@@ -18,7 +18,7 @@
 # This software is distributed on an "AS IS" basis, WITHOUT WARRANTY OF ANY
 # KIND, either express or implied.
 #
-# $Id: Makefile.dist,v 1.44 2008-02-10 01:32:43 gknauf Exp $
+# $Id: Makefile.dist,v 1.45 2008-08-23 22:02:41 bagder Exp $
 ###########################################################################
 
 VC=vc6
@@ -265,4 +265,6 @@ ca-bundle: lib/mk-ca-bundle.pl
 	@echo "generate a fresh ca-bundle.crt"
 	@perl $< -b -l -u lib/ca-bundle.crt
 
-
+ca-firefox: lib/db2pem.sh
+	@echo "generate a fresh ca-bundle.crt"
+	./lib/firefox-db2pem.sh lib/ca-bundle.crt
